--- a/.github/workflows/构建_ImmortalWrt_23.05.yml
+++ b/.github/workflows/构建_ImmortalWrt_23.05.yml
@@ -33,7 +33,7 @@ on:
 
 env:
   OPENWRT_NAME: immortalwrt
-  UPLOAD_TAG_NAME: xr30-emmc
+  UPLOAD_TAG_NAME: RAX_3000Z增强版
   REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: openwrt-23.05
   FREE_DISK_SH: scripts/free_disk_space.sh
@@ -162,7 +162,7 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success' && !cancelled()
       run: |
-        echo -e "### immortalwrt-23.05-SNAPSHOT-rax3000m-emmc-ubootmod" >> release.txt
+        echo -e "### immortalwrt-23.05-${{ env.UPLOAD_TAG_NAME }}-ubootmod" >> release.txt
         echo "- 使用源码：${{ env.REPO_URL }}" >> release.txt
         echo "- 使用分支：${{ env.REPO_BRANCH }}" >> release.txt
         echo "- 登录地址：192.168.5.1" >> release.txt
